05/13/2004  version 0.1.72  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug in the displaying of nodes in the tree. The algorithm
      That desides if a node is to be displayed caused null pointer exceptions
      to be thrown.
    * Fixed various bugs. Moved logic for opening save dialogs to the
      DocumentBuffer class.
    * Fixed a bug in the inserting of nodes in the DefaultViewTreeNode class
      The setParent method wasn't setting the correct parent.

05/07/2004  version 0.1.71  Ian Lewis <IanLewis@member.fsf.org>

    * Added a layer between the AdapterNode and the GUI. The DefaultViewTreeNode
      class contains properties for use with the GUI. AdapterNode now doesn't
      any GUI specific code in it.

04/23/2004  version 0.1.70  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed some syncing problems with the XMLDocument and client classes
      when the serialization process changes the structure of the document
      by splitting cdata-section nodes.
    * Fixed a bug that caused IndexOutOfBoundsExceptions to be thrown when
      writing a document over 5120 bytes.
    * Fixed a bug in the serializer that caused the root element opening tag
      to be placed directly after a document type definition.
    * updated how the DOMSerializer uses Writers. It uses them in a better way
      now.

04/23/2004  version 0.1.69  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug that was causing comment nodes to indented too far
      when formatting the document during serialization.
    * Reworked the updatedMenuBar() method in the TabbedView so that
      it doesn't create the whole menubar from scratch each time it's
      updated.
    * Fixed a bug in serialization that caused only the public id and not
      the system id to be seraliazed if both existed in a doctype node.

04/22/2004  version 0.1.68  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a build problem that was introduced into cvs.